Add definitions section
Add definition section giving a detail description of call trees,
including diagrams. Re-read document and polished it up.

--- a/doc/cover.tex
+++ b/doc/cover.tex
@@ -10,8 +10,11 @@
       \end{tabular}\par
     }
     \vskip 2.0em
-                                                    		
-    {\large 3rd of November 2017}
+                                                   		
+    {\LARGE DRAFT}            
+    \vskip 2.0em
+		
+    {\large 25th of April 2017}
     \vskip 2.0em
                                                     		
     Supervised by: Anthony Widjaja Lin
