--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -1,4 +1,19 @@
 \chapter{Introduction}
+
+\section{Motivation}
 TODO
 
-% TODO: approach principle. measuring each method instead of the whole project
+\section{Objectives}
+TODO
+
+\section{Theory}
+TODO:
+\begin{itemize}
+  \item Explain approach principle - measuring time spent each method instead of measuring the whole project for each input of size $n$ and the assumed advantages of using this approach
+\end{itemize}
+
+\section{Challenges}
+TODO:
+\begin{itemize}
+  \item Explain the challenges that arise by measuring a multitude of methods
+\end{itemize}
