Cleaned up time complexity SDK

--- a/doc/design.tex
+++ b/doc/design.tex
@@ -142,9 +142,9 @@ This module is responsible for analysing the data captured by the time recorder.
   \item \textbf{Warm-up}: run some rounds and ignore the recorded data. This will instrument all the methods that need to be measured, which will make the algorithm under test run slightly slower. The end user will be able to choose how many warm-up rounds to have (could be zero)
   \item \textbf{Record}: run the recording rounds. The rounds are run with different $n$ and each will produce a call tree measured by the time recorder. The end user will be able to choose what $n$'s to use and how many rounds to run for each $n$
   \item \textbf{Aggregate}: for each $n$ there are now several call trees. The aggregation will, for each $n$, take the set of call trees and transform it into one single call tree, where each node in it contains the associated set of measurements
-  \item \textbf{Clean up}: there are now several measurements in each node in each call tree, some of which are far from the average for that node (outliers) and can be removed. The remaining measurements in each node are averaged together so that there is only one value per node in each call tree. The end user will be able to choose the upper limit of how many outliers to exclude (could be zero)
+  \item \textbf{Clean up and average}: there are now several measurements in each node in each call tree, some of which are far from the average for that node (outliers) and can be removed. The remaining measurements in each node are averaged together so that there is only one value per node in each call tree. The end user will be able to choose the upper limit of how many outliers to exclude (could be zero)
   \item \textbf{Normalise}: each node in the call tree now contains information about how many times it has been called and how much total time has been spent inside that method. Because of the simple nature of the time recorder, each node is affected by other nodes in the same branch. The number of times it has been called is affected by the number of times its parent has been called while the time spent inside the method is affected by the time spent in its children too. The normalisation process takes the call tree in raw format (see Figure \ref{fig:rawcalltree}) and ensures that each node only contains data related to that specific node (see Figure \ref{fig:normalisedcalltree})
-  \item \textbf{Interpolation}: there is now a normalised call tree for each $n$ with one measurement per node. For each node in a call tree, the same node can be found in another call tree that is associated to a different $n$, simply by following the same path in the trees. Interpolation is the act of finding a curve that best approximates the relationship between these nodes across different call trees, i.e. a function $f(n)$ that takes $n$ as input and returns the measurement as output (see example in Figure \ref{fig:interpolatedcalltree}). This function accurately describes the time complexity of the corresponding method
+  \item \textbf{Interpolate}: there is now a normalised call tree for each $n$ with one measurement per node. For each node in a call tree, the same node can be found in another call tree that is associated to a different $n$, simply by following the same path in the trees. Interpolation is the act of finding a curve that best approximates the relationship between these nodes across different call trees, i.e. a function $f(n)$ that takes $n$ as input and returns the measurement as output (see example in Figure \ref{fig:interpolatedcalltree}). This function accurately describes the time complexity of the corresponding method
   \item \textbf{Calculate time complexity}: there is now one single call tree with a function $f(n)$ per node approximating the measurement of the corresponding method as a function of $n$. The time complexity can be calculated, describing the whole algorithm as a function of $n$ by simply navigating through the tree
 \end{enumerate}
 
